Version 3.2.1: Finished